[workspace]
resolver = "2"
members = [ "example","prost-reflect-validate", "prost-validate-tests"]

[workspace.package]
version = "0.0.1"
authors = ["Adphi"]
edition = "2021"
description = ""
documentation = ""
license = "Apache-2.0"
repository = "https://github.com/linka-cloud/prost-validate"

[workspace.dependencies]
prost = "0.13.2"
prost-build = "0.13.2"
prost-types = "0.13.2"
prost-reflect = { version = "0.14.1", features = ["derive"] }
prost-reflect-build = "0.14.0"
anyhow = "1.0.86"
thiserror = "1.0.63"
lazy_static = "1.5.0"
http = "1.1.0"
itertools = "0.13.0"
once_cell = "1.19.0"
regex = "1.10.6"
time = "0.3.36"
email_address = "0.2.9"
