[workspace]
resolver = "2"
members = [
    "example",
    "example-proto",
    "prost-reflect-validate",
    "prost-validate",
    "prost-validate-build",
    "prost-validate-derive",
    "prost-validate-derive-core",
    "prost-validate-tests",
    "prost-validate-types",
    ".xtask",
]

[workspace.package]
version = "0.2.9"
authors = ["Adphi"]
edition = "2021"
description = ""
documentation = ""
license = "Apache-2.0"
repository = "https://github.com/linka-cloud/prost-validate"

[workspace.dependencies]
prost = "0.14.1"
prost-build = "0.14.1"
tonic-prost-build = "0.14.2"
prost-types = "0.14.1"
prost-reflect = { version = "0.16.2", features = ["derive", "serde"] }
prost-reflect-build = "0.16.0"
tonic = "0.14.2"
tonic-types = "0.14.2"
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
anyhow = "1.0.86"
thiserror = "1.0.63"
http = "1.1.0"
itertools = "0.13.0"
once_cell = "1.19.0"
regex = "1.10.6"
time = "0.3.36"
email_address = "0.2.9"
criterion = { version = "0.5", features = ["html_reports"] }
syn = "2"
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
darling = { version = "0.20", features = ["suggestions"] }
pbjson-build = "0.8.0"
pbjson = { version = "0.8.0" }
pbjson-types = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }

prost-validate = { version = "0.2.9", path = "prost-validate" }
prost-reflect-validate = { version = "0.2.9", path = "prost-reflect-validate" }
prost-validate-build = { version = "0.2.9", path = "prost-validate-build" }
prost-validate-derive = { version = "0.2.9", path = "prost-validate-derive" }
prost-validate-types = { version = "0.2.9", path = "prost-validate-types" }
prost-validate-derive-core = { version = "0.2.9", path = "prost-validate-derive-core" }

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
needless_pass_by_value = "deny"
trivially_copy_pass_by_ref = "deny"
[workspace.lints.rust]
unused_extern_crates = "warn"
