[package]
name = "example-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
prost = { workspace = true }
prost-reflect = { workspace = true }
prost-reflect-validate = { path = "../prost-reflect-validate" }
once_cell = { workspace = true }

[build-dependencies]
prost-reflect-build = { workspace = true }
