[package]
name = "example-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
prost = { workspace = true }
prost-reflect = { workspace = true }
prost-validate = { workspace = true, features = ["derive"] }
tonic = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
prost-reflect-build = { workspace = true }
prost-validate-build = { workspace = true }
tonic-build = { workspace = true }
