[package]
name = "example"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "reflect"
path = "src/reflect.rs"
[[bin]]
name = "derive"
path = "src/derive.rs"

[dependencies]
prost = { workspace = true }
prost-reflect = { workspace = true }
prost-validate = { workspace = true, features = ["derive"] }
prost-reflect-validate = { workspace = true }
once_cell = { workspace = true }
example-proto = { path = "../example-proto" }
