[package]
name = "prost-reflect-validate"
description = "protoc-gen-validate's validation using prost-reflect"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

exclude = [
    "tests"
]

[lib]
doctest = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
time = { workspace = true }
email_address = { workspace = true }
no_deadlocks = "1.3.2"

[build-dependencies]
prost-reflect-build = { workspace = true }
