[package]
name = "prost-reflect-validate"
description = "protoc-gen-validate's validation using prost-reflect"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

exclude = [
    "tests"
]

[dependencies]
prost = { workspace = true }
prost-reflect = { workspace = true }
prost-validate-types = { workspace = true }
prost-validate = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
time = { workspace = true }
email_address = { workspace = true }
no_deadlocks = "1.3.2"
prost-types = { workspace = true }

[dev-dependencies]
example-proto = { path = "../example-proto" }
prost-reflect-build = { workspace = true }

[lints]
workspace = true
