[package]
name = "prost-validate-build"
description = "protoc-gen-validate's validation generation using prost-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost-build = { workspace = true }
prost-reflect = { workspace = true }
prost-validate-types = { workspace = true }
prost-validate-derive-core = { workspace = true }
heck = "0.5.0"

[lints.clippy]
panic = "allow"
unwrap_used = "allow"
expect_used = "allow"
