[package]
name = "prost-validate-derive"
description = "the prost-validate derive"
documentation = "https://docs.rs/prost-validate-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
prost-validate-derive-core = { workspace = true }

[lints]
workspace = true
