[package]
name = "prost-validate-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
prost-reflect-validate = { path = "../prost-reflect-validate" }
time = { workspace = true }

[build-dependencies]
prost-reflect-build = { workspace = true }
walkdir = "2.5.0"
anyhow = { workspace = true }
