[package]
name = "prost-validate-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bench]]
name = "harness"
harness = false

[features]
default = []
derive = []
reflect = []

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
prost-reflect-validate = { workspace = true }
prost-validate = { workspace = true, features = ["derive"] }
time = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
prost-reflect-build = { workspace = true }
prost-validate-build = { workspace = true }
walkdir = "2.5.0"
anyhow = { workspace = true }

[lints]
workspace = true
