[package]
name = "prost-validate-types"
description = "validation types with prost and prost-reflect support"
documentation = "https://docs.rs/prost-validate-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
prost-reflect-build = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
